# cppVulkan

./: .gitignore  CMakeLists.txt  ForWindows.md  LICENCE  README.md  installs.bat  package-lock.json  package.json  re.txt  tmp.cpp  vcpkg.json  vulkan.txt
UI/pages/: main.json
UI/styles/: button.json
core/module/: ease.cppm  fontManager.cppm  form.cppm  seewk.cppm  tweenManager.cppm  windowManager.cppm
core/module/vulkan/: appWindow.cppm  vulkanCore.cppm
core/src/: instance.cpp
core/src/core/: core.cpp
core/src/core/classes/: VKTextureManager.cpp  vkObject.cpp
core/src/core/vulkan/: surface.cpp  window.cpp
docs/en/: README.md
include/: enter.h  main.h  seewk.hpp
include/components/: componentBase.hpp
include/core/: core.h  paint.h  types.hpp
include/core/classes/: VKTextureManager.h  graphicPipeline.h  materialUBO.h  mesh.h  objectActions.h  vertex.h  vkObject.h
include/core/interface/: iwindow.hpp
include/core/interfaces/: form.hpp
include/core/main/: seewkObject.hpp  windowManager.hpp
include/core/vulkan/: appWindow.hpp  device.hpp  instance.hpp  log.hpp  surface.hpp  vulkanCore.hpp  vulkanInstance.hpp  window.hpp
include/main/: form.hpp  object.hpp
main/: asd  asdasd.cpp  bacjk.cpp  back.cpp  backGemini.cpp  d.cpp  enter.cpp  entry.cpp
main/windows/: windows_main.cpp  windows_window.cpp  windows_window.h
module/: form.ixx  main.ixx  test.ixx  windowManager.ixx
module/vulkan/: appWindow.ixx  vulkan.ixx  vulkanCore.ixx
shader/: compile.bat  pick.frag  pick.vert  pick_frag.spv  pick_vert.spv  test.frag  test.vert  test_frag.spv  test_vert.spv
shader/include/: frag.h  vert.h
src/: main.cpp  test.ixx
src/core/: core.cpp  enter.cpp  paint.cpp  test.cpp
src/core/classes/: VKTextureManager.cpp  vertex.cpp  vkObject.cpp
src/core/vulkan/: appWindow.cpp  device.cpp  instance.cpp  surface.cpp  vulkanInstance.cpp  window.cpp
src/modules/core/vulkan/: vulkan-instance.ixx
